[gd_scene load_steps=4 format=3 uid="uid://dobpor4gvju83"]

[ext_resource type="Script" path="res://Scenes/staff.gd" id="1_oi2sp"]
[ext_resource type="AudioStream" uid="uid://cyvkf7gv134tu" path="res://Sounds/staff_fire.wav" id="2_3e02v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uf5hl"]

[node name="Staff" type="Node2D"]
script = ExtResource("1_oi2sp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uf5hl")

[node name="ShootSpeedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3e02v")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
